fix pagespeed annoyance

--- a/posts/2022-12-03_aoc3.md
+++ b/posts/2022-12-03_aoc3.md
@@ -62,7 +62,8 @@ procedural solution runs in 139ms (more on this solution later). That's
 a ~39x speedup (!!). And that's pretty slow: I saw some rust and C++
 going at just ~10ms for part two, another order of magnitude faster. So,
 I took this opportunity to profile my Go code. Find all my (bad) code
-[here](https://github.com/pineman/AoC2022/blob/main/2022/day3/three.go#L48).
+[on
+github](https://github.com/pineman/AoC2022/blob/main/2022/day3/three.go#L48).
 
 ### Profiling for fun
 
