--- a/posts/2025-02-01_k8s-dns.md
+++ b/posts/2025-02-01_k8s-dns.md
@@ -42,7 +42,7 @@ much piling up [^2].
 
 Our infrastructure engineer was out Friday and Monday, which complicates
 things a bit, but he actually replied to me during his PTO (thanks
-Ricardo!). Our initial theory was that DNS was failing due to excessive
+Ricardo!): our initial theory was that DNS was failing due to excessive
 load, as we had seen that in the past [^3]. Our kube-dns deployment was
 already scaled beyond a reasonable scale, using kube-dns-autoscaler [^4]
 (we use kube-dns since we're on GKE).
@@ -74,7 +74,7 @@ Great! But who is `172.18.130.10`?... Well, it's a Service, a ClusterIP.
 There's a bunch of kube-dns pods, so this is probably some sort of
 entrypoint load balancer thingy? Provided by GKE?
 
-At around this time, my coworker was experimenting with turning off our
+At around this time, my colleague was experimenting with turning off our
 Kafka consumers to see if the issue really was load related, since they
 were pretty busy. I kept running the DNS requests loops in multiple
 pods.
@@ -118,7 +118,7 @@ that worked with just a minor follow-up. Here it is:
 
 ``` shell
 servers=(
-<kube-dns endpoints here>
+<kube-dns ips here>
 )
 
 monitor_server() {
