--- a/posts/2025-02-01_k8s-dns.md
+++ b/posts/2025-02-01_k8s-dns.md
@@ -28,7 +28,7 @@ since that basically only happens at the app's startup. When they did
 fail, the pod would just restart; and since the problem wasn't on 100%
 of queries, the app was pretty much up for the whole duration of the
 incident. Other workloads that call internal services, such as ML
-services, run on Sidekiq and so will retry on failure, so they were
+services, run on Sidekiq and so will retry on failure - they were also
 mostly unaffected. Most of the user-observable impact was some failed
 exports, since those jobs have a low retry count.
 
@@ -59,9 +59,9 @@ immediate sense of the scale of the problem:
 while :; do time getent hosts pgbouncer-web-ampledash.core; done
 ```
 
-Occasionally, maybe once every 15s, I'd notice a slow request, that
-would eventually time out. So I asked: so what DNS server are we using,
-exactly? Good ol' `/etc/resolv.conf` has the answer, naturally:
+Occasionally, maybe once every 15s, I'd notice a slow request that would
+eventually time out. So I asked: what DNS server are we using, exactly?
+Good ol' `/etc/resolv.conf` has the answer, naturally:
 
 ``` plaintext
 root@ampledash-console-75467d5c8c-n5j9b:/app# cat /etc/resolv.conf
