--- a/posts/2022-12-03_aoc3.md
+++ b/posts/2022-12-03_aoc3.md
@@ -1,7 +1,6 @@
 # AoC 2022: day 3, profiling Go, existential crisis
 
-Ok hi! One of my first projects ever was a [blog written in python
-flask](https://github.com/pineman/code/tree/main/old_proj/pineblog)
+Ok hi! One of my first projects ever was a blog written in python flask
 (please don't look at it, it was 2015). Even though I shut it down a
 couple of months after having it up on my server (a VPS at the time), my
 admiration for blogging didn't stop and, of course, I read a bazillion
